--- a/acer-monitor.html
+++ b/acer-monitor.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-monitor.css">
   </head>
   <body>
 
@@ -46,16 +46,16 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-monitor">
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/acer monitor/acermonitor1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Nitro by Acer 27" Full HD 1920 x 1080 1500R Curve PC Gaming Monitor |
-          AMD FreeSync Premium | 165Hz Refresh | 1ms (VRB) | ZeroFrame Design |
+        <h2>Nitro by Acer</h2>
+        <p>27" Full HD 1920 x 1080 1500R Curve PC Gaming Monitor <br>
+          AMD FreeSync Premium 165Hz Refresh | 1ms (VRB) | ZeroFrame Design |<br>
           1 x Display Port 1.4 & 2 x HDMI 2.0 Ports ED270R Mbmiiphx
         </p>
-        <p>159</p>
+        <p>320KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -63,13 +63,16 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/acer monitor/acermonitor2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Acer KG251Q Jbmidpx 24.5” Full HD (1920 x 1080) Gaming Monitor | AMD
-          FreeSync | Up to 165Hz Refresh Rate | Up to 0.6ms | Zero-Frame | 2 x 2
-          Watt Speakers (1 x Display Port, 1 x HDMI & 1 x DVI)</p>
-        <p>199</p>
+        <h2>Acer KG251Q Jbmidpx </h2>
+        <p>24.5” Full HD (1920 x 1080) Gaming Monitor AMD FreeSync <br>|
+          | Up to 165Hz Refresh Rate |Up to 0.6ms | Zero-Frame |<br>
+
+          2 x 2 Watt Speakers (1 x Display Port, 1 x HDMI & 1 x DVI)
+        </p>
+
+        <p>400KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -77,27 +80,35 @@
 
       </div>
 
-      <div class="product-box">
+
+
+
+      <div class="product-box-monitor">
         <img src="images/acer monitor/acermonitor3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Acer Nitro XV272U Vbmiiprx 27" Zero-Frame WQHD 2560 x 1440 Gaming
-          Monitor | AMD FreeSync Premium | Agile-Splendor IPS | Overclock to
-          170Hz | Up to 0.5ms | 95% DCI-P3 | 1 x Display Port & 2 x HDMI 2.0</p>
-        <p>248</p>
+        <h2>Acer Nitro XV272U Vbmiiprx </h2>
+        <p>27" Zero-Frame WQHD 2560 x 1440 Gaming <br>
+          Monitor AMD FreeSync Premium | Agile-Splendor IPS | <br>
+          Overclock to 170Hz | Up to 0.5ms | 95% DCI-P3 | <br>
+          1 x Display Port & 2 x HDMI 2.0</p>
+        <p>500KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
         </div>
 
+
+
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/acer monitor/acermonitor4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Acer Nitro XZ320Q Xbmiiphx 31.5"" 1500R Curved Full HD (1920 x 1080)
-          VA Zero-Frame Gaming Monitor with Adaptive-Sync Technology, 240Hz
-          Refresh Rate, 1ms VRB, (Display Port & 2 x HDMI Ports), Black</p>
-        <p>417</p>
+        <h2>Acer Nitro XZ320Q Xbmiiphx</h2>
+        <p> 31.5"" 1500R Curved Full HD (1920 x 1080) <br>
+          VA Zero-Frame Gaming Monitor <br>
+          with Adaptive-Sync Technology, 240Hz <br>
+          Refresh Rate, 1ms VRB, (Display Port & 2 x HDMI Ports), Black
+        </p>
+        <p>800KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -105,13 +116,14 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/acer monitor/acermonitor5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Acer Predator XB323U GXbmiiphzx 32" WQHD (2560 x 1440) IPS Gaming
-          Monitor | NVIDIA G-SYNC Compatible | Certified DisplayHDR600 | Up to
+        <h2>Acer Predator XB323U GXbmiiphzx</h2>
+        <p> 32" WQHD (2560 x 1440) IPS Gaming <br>
+          Monitor | NVIDIA G-SYNC Compatible | <br>
+          Certified DisplayHDR600 | Up to <br>
           0.5ms | Up to 270Hz | 1 x Display Port, 2 x HDMI and 4 x USB 3.0</p>
-        <p>899</p>
+        <p>1998KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -119,13 +131,15 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/acer monitor/acermonitor6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Acer Nitro XR343CK Pbmiipphuzx 34" UltraWide QHD 3440x1440 1900R
+        <h2>Acer Nitro XR343CK Pbmiipphuzx </h2>
+        <p>34" UltraWide QHD 3440x1440 1900R <br>
           Curved Gaming Monitor | AMD FreeSync Premium | 180Hz | DisplayHDR400 |
-          DCI-P3 98% | 1 x USB 3.1 Type-C, 2 x Display Port & 2 x HDMI 2.0</p>
-        <p>699</p>
+          <br>
+          DCI-P3 98% | 1 x USB 3.1 Type-C, <br>
+          2 x Display Port & 2 x HDMI 2.0</p>
+        <p>1400KM</p>
 
         <div class="opcije">
           <a href="#">Buy it now</a>
