--- a/asus-monitor.html
+++ b/asus-monitor.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-monitor.css">
   </head>
   <body>
 
@@ -45,13 +45,14 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-monitor">
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/asus monitor/asusmonitor1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>ASUS TUF Gaming 32" 1440P HDR Curved Monitor (VG32VQ1B) - QHD (2560 x
-          1440), 165Hz (Supports 144Hz), 1ms, Extreme Low Motion Blur, Speaker,
+        <h2>ASUS TUF Gaming </h2>
+        <p>32" 1440P HDR Curved Monitor (VG32VQ1B) - <br>
+          QHD (2560 x 1440), 165Hz (Supports 144Hz), 1ms, <br>
+          Extreme Low Motion Blur, Speaker, <br>
           FreeSync Premium, VESA Mountable, DisplayPort, HDMI
         </p>
         <p>328</p>
@@ -62,11 +63,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/asus monitor/asusmonitor2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS TUF Gaming 27" 2K HDR Gaming Monitor (VG27AQ) - QHD (2560 x
-          1440), 165Hz (Supports 144Hz), 1ms, Extreme Low Motion Blur, Speaker,
+        <h2>ASUS TUF Gaming</h2>
+        <p> 27" 2K HDR Gaming Monitor (VG27AQ) - <br>
+          QHD (2560 x 1440), 165Hz (Supports 144Hz), 1ms, <br>
+          Extreme Low Motion Blur, Speaker, <br>
           G-SYNC Compatible, VESA Mountable, DisplayPort, HDMI</p>
         <p>299</p>
 
@@ -76,12 +78,14 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/asus monitor/asusmonitor3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS ROG Strix 27” 1080P Gaming Monitor (XG276Q) - Full HD, IPS,
-          170Hz, 1ms, Extreme Low Motion Blur, FreeSync Premium technology,
-          DisplayPort, HDMI, Tripod socket for Webcam, DisplayHDR400</p>
+        <h2>ASUS ROG Strix</h2>
+        <p> 27” 1080P Gaming Monitor (XG276Q) - <br>
+          Full HD, IPS,170Hz, 1ms, Extreme Low Motion Blur, <br>
+          FreeSync Premium technology,DisplayPort, HDMI, <br>
+          Tripod socket for
+          Webcam, DisplayHDR400</p>
         <p>239</p>
 
         <div class="opcije">
@@ -90,12 +94,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/asus monitor/asusmonitor4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS TUF Gaming 24” 1080P Monitor (VG248Q1B) - Full HD, 165Hz,
-          Extreme Low Motion Blur, 0.5ms, FreeSync Premium, Eye Care,
-          DisplayPort, HDMI, Shadow Boost, VESA Wall Mountable, Tilt Adjustable</p>
+        <h2>ASUS TUF Gaming</h2>
+        <p> 24” 1080P Monitor (VG248Q1B) - <br>
+          Full HD, 165Hz,Extreme Low Motion Blur, 0.5ms, <br>
+          FreeSync Premium, Eye Care,DisplayPort, HDMI, <br>
+          Shadow Boost, VESA Wall Mountable, Tilt Adjustable</p>
         <p>149</p>
 
         <div class="opcije">
@@ -104,12 +109,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/asus monitor/asusmonitor5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS ROG Strix 34” Ultra-wide Gaming Monitor (XG349C) - UWQHD (3440 x
-          1440), 180Hz, 1ms, Extreme Low Motion Blur Sync, 135% sRGB, G-Sync
-          Compatible, DisplayHDR 400, Eye Care, USB-C, DisplayPort, HDMI</p>
+        <h2>ASUS ROG Strix </h2>
+        <p>34” Ultra-wide Gaming Monitor (XG349C) - <br>
+          UWQHD (3440 x 1440), 180Hz, 1ms, Extreme Low Motion Blur Sync, <br>
+          135% sRGB, G-Sync Compatible, DisplayHDR 400, <br>
+          Eye Care, USB-C, DisplayPort, HDMI</p>
         <p>797</p>
 
         <div class="opcije">
@@ -118,11 +124,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/asus monitor/asusmonitor6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Asus VP228HE 21.5” Full HD 1920x1080 1ms HDMI VGA Eye Care
-          Monitor,Blacklight</p>
+        <h2>Asus VP228HE</h2>
+        <p> 21.5” Full HD 1920x1080 <br> 1ms HDMI VGA <br>
+          Eye Care Monitor, <br>
+          Blacklight</p>
         <p>94</p>
 
         <div class="opcije">
