--- a/graficka kartica.html
+++ b/graficka kartica.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-graficka.css">
   </head>
   <body>
 
@@ -45,13 +45,13 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-graficka ">
 
-      <div class="product-box">
+      <div class="product-box-graficka ">
         <img src="images/graficka/graficka1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>ZOTAC Gaming GeForce GTX 1660 6GB GDDR5 192-bit Gaming Graphics Card,
-          Super Compact, ZT-T16600K-10M
+        <h2>ZOTAC Gaming GeForce GTX 1660</h2>
+        <p> 6GB GDDR5 192-bit Gaming Graphics Card, <br>
+          Super Compact, <br> ZT-T16600K-10M
         </p>
         <p>219</p>
 
@@ -61,11 +61,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-graficka ">
         <img src="images/graficka/graficka2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ZOTAC Gaming GeForce RTX 3060 Twin Edge OC 12GB GDDR6 192-bit 15 Gbps
-          PCIE 4.0 Gaming Graphics Card, IceStorm 2.0 Cooling, Active Fan
+        <h2>ZOTAC Gaming GeForce RTX 3060 </h2>
+        <p>Twin Edge OC 12GB GDDR6 192-bit 15 Gbps <br>
+          PCIE 4.0 Gaming Graphics Card, IceStorm 2.0 Cooling, <br>Active Fan
           Control, Freeze Fan Stop ZT-A30600H-10M</p>
         <p>349</p>
 
@@ -75,12 +75,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-graficka ">
         <img src="images/graficka/graficka3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ZOTAC Gaming GeForce RTX™ 3070 Ti AMP Holo 8GB GDDR6X 256-bit 19 Gbps
-          PCIE 4.0 Gaming Graphics Card, HoloBlack, IceStorm 2.0 Advanced
-          Cooling, Spectra 2.0 RGB Lighting, ZT-A30710F-10P</p>
+        <h2>ZOTAC Gaming GeForce RTX™ 3070 Ti</h2>
+        <p> AMP Holo 8GB GDDR6X 256-bit 19 Gbps
+          PCIE 4.0 <br>Gaming Graphics Card, HoloBlack, IceStorm 2.0 Advanced
+          Cooling,<br> Spectra 2.0 RGB Lighting, ZT-A30710F-10P</p>
         <p>934</p>
 
         <div class="opcije">
@@ -89,10 +89,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-graficka ">
         <img src="images/graficka/graficka4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>XFX Speedster QICK308 Radeon RX 6650XT Ultra Gaming Graphics Card
+        <h2>XFX Speedster Radeon RX 6650XT</h2>
+        <p> Ultra Gaming Graphics Card
+          <br>
           with 8GB GDDR6 HDMI 3xDP, AMD RDNA 2 RX-665X8LUDY</p>
         <p>309</p>
 
@@ -102,11 +103,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-graficka ">
         <img src="images/graficka/graficka5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI Gaming AMD Radeon RX 6600 128-bit 8GB GDDR6 DP/HDMI Dual Torx
-          Fans FreeSync DirectX 12 VR Ready Graphics Card (RX 6600 MECH 2X 8G)</p>
+        <h2>MSI Gaming AMD Radeon RX 6600 </h2>
+        <p>128-bit 8GB GDDR6 DP/HDMI Dual Torx
+          Fans FreeSync <br>DirectX 12 VR Ready Graphics Card (RX 6600 MECH 2X
+          8G)</p>
         <p>306</p>
 
         <div class="opcije">
@@ -115,10 +117,10 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-graficka ">
         <img src="images/graficka/graficka6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>XFX Speedster MERC310 AMD Radeon RX 7900XT Ultra Gaming Graphics Card
+        <h2>XFX Speedster AMD Radeon RX 7900XT</h2>
+        <p> Ultra Gaming Graphics Card <br>
           with 20GB GDDR6, AMD RDNA 3 RX-79TMERCU9</p>
         <p>949</p>
 
