--- a/hdd.html
+++ b/hdd.html
@@ -49,10 +49,9 @@
 
       <div class="product-box">
         <img src="images/hdd/hdd1.webp" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Western Digital 2TB WD Blue PC <br> Internal Hard Drive - 7200 RPM
-          Class,
-          SATA 6 Gb/s, 256 MB Cache, 3.5" <br> - WD20EZBX
+        <h2>Western Digital </h2>
+        <p>2TB WD Blue PC <br> Internal Hard Drive - 7200 RPM
+          Class, <br> SATA 6 Gb/s,<br> 256 MB Cache, 3.5" - WD20EZBX
         </p>
         <p>44</p>
 
@@ -64,9 +63,11 @@
 
       <div class="product-box">
         <img src="images/hdd/hdd2.webp" alt="">
-        <h2>Product 1</h2>
-        <p>Western Digital 8TB WD Blue PC Internal Hard Drive HDD - 5640 RPM,
-          SATA 6 Gb/s, 128 MB Cache, 3.5" - WD80EAZZ</p>
+        <h2>Western Digital </h2>
+        <p>8TB WD Blue PC Internal Hard Drive <br>HDD - 5640
+          RPM,
+
+          SATA 6 Gb/s, <br> 128 MB Cache, 3.5" - <br> WD80EAZZ</p>
         <p>110$</p>
 
         <div class="opcije">
@@ -77,102 +78,109 @@
 
       <div class="product-box">
         <img src="images/hdd/hdd3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Seagate IronWolf 4TB NAS Internal Hard Drive HDD – CMR 3.5 Inch SATA
-          6Gb/s 5900 RPM 64MB Cache for RAID Network Attached Storage, Rescue
-          Services – Frustration Free Packaging (ST4000VNZ06)</p>
-        <p>74</p>
+        <h2>Seagate IronWolf</h2>
+        <p> 4TB NAS Internal Hard Drive HDD – CMR 3.5 Inch<br/> SATA
+            6Gbs5900 RPM 64MB Cache for RAID <br>Network Attached
+            Storage,Rescue Services– <br> Frustration Free Packaging
+            (ST4000VNZ06)</p>
+          <p>74</p>
 
-        <div class="opcije">
-          <a href="#">Buy it now</a>
+          <div class="opcije">
+            <a href="#">Buy it now</a>
+          </div>
+
         </div>
+
+
+
+
+        <div class="product-box">
+          <img src="images/hdd/hdd4.jpg" alt="">
+          <h2>Seagate Exos X18</h2>
+          <p> 18TB Enterprise HDD - CMR 3.5 Inch Hyperscale SATA <br>
+            6Gb/s, 7200 RPM, 512e and 4Kn FastFormat, <br> Low Latency with
+            Enhanced
+            <br>
+            Caching (ST18000NM000J)</p>
+          <p>299</p>
+
+          <div class="opcije">
+            <a href="#">Buy it now</a>
+          </div>
+
+        </div>
+
+        <div class="product-box">
+          <img src="images/hdd/hdd5.jpg" alt="">
+          <h2>Western Digital RE</h2>
+          <p> 4TB 7200RPM 64MB Cache SATA 6.0Gb/s 3.5"<br>
+            Enterprise Internal Hard Drive (WD4000FYYZ) <br>OEM - 3 Years
+            Warranty
+            (Renewed)</p>
+          <p>46</p>
+
+          <div class="opcije">
+            <a href="#">Buy it now</a>
+          </div>
+
+        </div>
+
+        <div class="product-box">
+          <img src="images/hdd/hdd6.jpg" alt="">
+          <h2>Western Digital</h2>
+          <p> 4TB WD Red NAS Internal Hard Drive HDD - 5400 RPM <br>
+            SATA 6 Gb/s, SMR, 256MB Cache, 3.5" - <br> WD40EFAX</p>
+          <p>76</p>
+
+          <div class="opcije">
+            <a href="#">Buy it now</a>
+          </div>
+
+        </div>
+
 
       </div>
 
-      <div class="product-box">
-        <img src="images/hdd/hdd4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Seagate Exos X18 18TB Enterprise HDD - CMR 3.5 Inch Hyperscale SATA
-          6Gb/s, 7200 RPM, 512e and 4Kn FastFormat, Low Latency with Enhanced
-          Caching (ST18000NM000J)</p>
-        <p>299</p>
 
-        <div class="opcije">
-          <a href="#">Buy it now</a>
+      <footer>
+        <div class="footer-content">
+          <div class="social">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+          </div>
+          <ul class="list">
+            <li>
+              <a href="#">GamingPC</a>
+            </li>
+
+            <li>
+              <a href="#">Laptopi</a>
+            </li>
+
+            <li>
+              <a href="#">Monitori</a>
+            </li>
+
+            <li>
+              <a href="#">Komponente</a>
+            </li>
+
+            <li>
+              <a href="#">Periferije</a>
+            </li>
+
+            <li>
+              <a href="#">Konzole</a>
+            </li>
+            <li>
+              <a href="#">Kontakt</a>
+            </li>
+          </ul>
+          <p class="copyright">copyright© 2022 Ahmed</p>
         </div>
+      </footer>
 
-      </div>
-
-      <div class="product-box">
-        <img src="images/hdd/hdd5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Western Digital RE 4TB 7200RPM 64MB Cache SATA 6.0Gb/s 3.5"
-          Enterprise Internal Hard Drive (WD4000FYYZ) OEM - 3 Years Warranty
-          (Renewed)</p>
-        <p>46</p>
-
-        <div class="opcije">
-          <a href="#">Buy it now</a>
-        </div>
-
-      </div>
-
-      <div class="product-box">
-        <img src="images/hdd/hdd6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Western Digital 4TB WD Red NAS Internal Hard Drive HDD - 5400 RPM,
-          SATA 6 Gb/s, SMR, 256MB Cache, 3.5" - WD40EFAX</p>
-        <p>76</p>
-
-        <div class="opcije">
-          <a href="#">Buy it now</a>
-        </div>
-
-      </div>
-
-
-    </div>
-
-
-    <footer>
-      <div class="footer-content">
-        <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-        </div>
-        <ul class="list">
-          <li>
-            <a href="#">GamingPC</a>
-          </li>
-
-          <li>
-            <a href="#">Laptopi</a>
-          </li>
-
-          <li>
-            <a href="#">Monitori</a>
-          </li>
-
-          <li>
-            <a href="#">Komponente</a>
-          </li>
-
-          <li>
-            <a href="#">Periferije</a>
-          </li>
-
-          <li>
-            <a href="#">Konzole</a>
-          </li>
-          <li>
-            <a href="#">Kontakt</a>
-          </li>
-        </ul>
-        <p class="copyright">copyright© 2022 Ahmed</p>
-      </div>
-    </footer>
-
-  </body>
-</html>
+    </body>
+  </html>
