--- a/maticna ploca.html
+++ b/maticna ploca.html
@@ -49,9 +49,11 @@
 
       <div class="product-box">
         <img src="images/maticna ploca (2)/maticna1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>ASUS ROG Strix B550-F Gaming AMD AM4 Zen 3 Ryzen 5000 & 3rd Gen Ryzen
-          ATX Gaming Motherboard (PCIe 4.0, 2.5Gb LAN, BIOS Flashback, HDMI 2.1,
+        <h2>ASUS ROG Strix B550-F</h2>
+        <p> Gaming AMD AM4 Zen 3 Ryzen 5000 & <br> 3rd Gen Ryzen
+          ATX Gaming Motherboard <br> (PCIe 4.0, 2.5Gb LAN, BIOS Flashback,
+          HDMI 2.1,
+          <br>
           Addressable Gen 2 RGB Header and Aura Sync)
         </p>
         <p>179</p>
@@ -64,9 +66,12 @@
 
       <div class="product-box">
         <img src="images/maticna ploca (2)/maticna2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS AM4 TUF Gaming X570-Plus (Wi-Fi) AM4 Zen 3 Ryzen 5000 & 3rd Gen
-          Ryzen ATX Motherboard with PCIe 4.0, Dual M.2, 12+2 with Dr. MOS Power
+        <h2>ASUS AM4 TUF Gaming X570-Plus</h2>
+        <p> (Wi-Fi) AM4 Zen 3 Ryzen 5000 & 3rd Gen
+          <br>
+          Ryzen ATX Motherboard with PCIe 4.0, <br> Dual M.2, 12+2 with Dr. MOS
+          Power
+          <br>
           Stage</p>
         <p>209</p>
 
@@ -78,9 +83,10 @@
 
       <div class="product-box">
         <img src="images/maticna ploca (2)/maticna3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI B550M PRO-VDH WiFi ProSeries Motherboard (AMD AM4, DDR4, PCIe
-          4.0, SATA 6Gb/s, M.2, USB 3.2 Gen 1, Wi-Fi, D-SUB/HDMI/DP, Micro-ATX)</p>
+        <h2>MSI B550M PRO-VDH</h2>
+        <p> WiFi ProSeries Motherboard <br> (AMD AM4, DDR4, PCIe
+          4.0, SATA 6Gb/s, M.2, <br> USB 3.2 Gen 1, Wi-Fi, <br> D-SUB/HDMI/DP,
+          Micro-ATX)</p>
         <p>119</p>
 
         <div class="opcije">
@@ -91,10 +97,12 @@
 
       <div class="product-box">
         <img src="images/maticna ploca (2)/maticna4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS ROG Strix Z690-E Gaming WiFi 6E LGA 1700(Intel 12th Gen)ATX
-          gaming motherboard(PCIe 5.0,DDR5,2.5 Gb LAN,Thunderbolt 4,5xM.2,1xPCIe
-          5.0 M.2,ROG Hyper M.2 Card,Front panel USB 3.2 Gen 2x2 Type-C)</p>
+        <h2>ASUS ROG Strix Z690-E Gaming</h2>
+        <p> WiFi 6E LGA 1700(Intel 12th Gen)ATX
+          gaming <br>motherboard(PCIe 5.0,DDR5, 2.5 Gb LAN,Thunderbolt<br>
+          4,5xM.2,1xPCIe 5.0 M.2, ROG Hyper M.2 Card,Front <br> panel USB 3.2
+          Gen 2x2
+          Type-C)</p>
         <p>379</p>
 
         <div class="opcije">
@@ -105,9 +113,11 @@
 
       <div class="product-box">
         <img src="images/maticna ploca (2)/maticna5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI MPG Z490 Gaming Carbon WiFi Gaming Motherboard (ATX, 10th Gen
-          Intel Core, LGA 1200 Socket, DDR4, SLI/CF, Dual M.2 Slots, USB 3.2 Gen
+        <h2>MSI MPG Z490 Gaming</h2>
+        <p> Carbon WiFi Gaming Motherboard (ATX, 10th Gen <br>
+          Intel Core, LGA 1200 Socket, DDR4, <br> SLI/CF, Dual M.2 Slots, USB
+          3.2 Gen
+          <br>
           2, Wi-Fi 6, DP/HDMI, Mystic Light RGB)</p>
         <p>148</p>
 
@@ -119,9 +129,10 @@
 
       <div class="product-box">
         <img src="images/maticna ploca (2)/maticna6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI MAG Z690 Tomahawk WiFi Gaming Motherboard (ATX, 12th Gen Intel
-          Core, LGA 1700 Socket, DDR5, PCIe 5, 2.5G LAN, M.2 Slots, Wi-Fi 6E)</p>
+        <h2>MSI MAG Z690 Tomahawk</h2>
+        <p> WiFi Gaming Motherboard (ATX, 12th Gen Intel <br>
+          Core, LGA 1700 Socket, DDR5, <br> PCIe 5, 2.5G LAN, M.2 Slots, Wi-Fi
+          6E)</p>
         <p>259</p>
 
         <div class="opcije">
