--- a/msi-monitor.html
+++ b/msi-monitor.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-monitor.css">
   </head>
   <body>
 
@@ -45,13 +45,14 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-monitor">
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/msi monitor/msimonitor1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>MSI MPG ARTYMIS 273CQR, 27" Gaming Monitor, 2560 x 1440 (QHD), VA,
-          165Hz, FreeSync Premium, HDR 400, HDMI, Displayport, USB C, Tilt,
+        <h2>MSI MPG ARTYMIS 273CQR</h2>
+        <p> 27" Gaming Monitor, 2560 x 1440 (QHD), VA,
+          <br>
+          165Hz, FreeSync Premium, HDR 400, HDMI, Displayport, USB C, Tilt, <br>
           Swivel, Height Adjustable
         </p>
         <p>372</p>
@@ -62,10 +63,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/msi monitor/msimonitor2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI G241VC, 24" Gaming Monitor, 1920 x 1080 (FHD), VA, 75Hz,
+        <h2>MSI G241VC</h2>
+        <p> 24" Gaming Monitor, 1920 x 1080 (FHD), <br> VA, 75Hz,
+          <br>
           FreeSync, VGA Port HDMI, Tilt</p>
         <p>163</p>
 
@@ -75,10 +77,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/msi monitor/msimonitor3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI G241V E2, 24" Gaming Monitor, 1920 x 1080 (FHD), IPS, 1ms, 75Hz,
+        <h2>MSI G241V E2</h2>
+        <p> 24" Gaming Monitor, 1920 x 1080 (FHD), IPS, 1ms, 75Hz,
+          <br>
           FreeSync, HDMI, Displayport, Tilt</p>
         <p>160</p>
 
@@ -88,10 +91,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/msi monitor/msimonitor4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI Full HD Rapid-IPS 1ms 2560 x 1080 Ultra Wide 200Hz Refresh Rate
+        <h2>MSI</h2>
+        <p> Full HD Rapid-IPS 1ms 2560 x 1080 Ultra Wide 200Hz Refresh Rate
+          <br>
           HDR Ready G-Sync Compatible 30” Gaming Monitor (Optix MAG301RF)</p>
         <p>229</p>
 
@@ -101,10 +105,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/msi monitor/msimonitor5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI MAG301CR2, 30" Gaming Monitor, 2560 x 1080 (UWFHD), VA, 200Hz,
+        <h2>MSI MAG301CR2</h2>
+        <p> 30" Gaming Monitor, 2560 x 1080 (UWFHD), VA, 200Hz,
+          <br>
           FreeSync, HDR Ready HDMI, Displayport, USB C, Tilt, Swivel, Height
           Adjustable</p>
         <p>307</p>
@@ -115,10 +120,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/msi monitor/msimonitor6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MSI Full QHD Anti-Glare 1ms 2560 x 1440 175Hz Refresh Rate HDR Ready
+        <h2>MSI </h2>
+        <p>Full QHD Anti-Glare 1ms 2560 x 1440 175Hz Refresh Rate HDR Ready
+          <br>
           USB/DP/HDMI 31.5” Monitor (Optix MPG321QRF-QD)</p>
         <p>561</p>
 
