--- a/procesor.html
+++ b/procesor.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-procesor.css">
   </head>
   <body>
 
@@ -45,12 +45,13 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-procesor">
 
-      <div class="product-box">
+      <div class="product-box-procesor">
         <img src="images/procesor/procesor1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>AMD Ryzen 9 5900X 12-core, 24-Thread Unlocked Desktop Processor
+        <h2>AMD Ryzen 9 5900X</h2>
+        <p> 12-core, <br> 24-Thread Unlocked <br> Desktop
+          Processor
         </p>
         <p>340</p>
 
@@ -60,10 +61,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-procesor">
         <img src="images/procesor/procesor2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>AMD Ryzen™ 7 5700X 8-Core, 16-Thread Unlocked Desktop Processor</p>
+        <h2>AMD Ryzen™ 7 5700X 8-Core</h2>
+        <p> <br> 16-Thread Unlocked <br> Desktop
+          Processor</p>
         <p>196</p>
 
         <div class="opcije">
@@ -72,11 +74,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-procesor">
         <img src="images/procesor/procesor3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Intel® Core™ i5-11600KF Desktop Processor 6 Cores up to 4.9 GHz
-          Unlocked LGA1200 (Intel® 500 Series & Select 400 Series Chipset) 125W</p>
+        <h2>Intel® Core™ i5-11600KF</h2>
+        <p> Desktop Processor <br> 6 Cores up to 4.9 GHz
+          Unlocked LGA1200 <br>(Intel® 500 Series & Select 400 Series
+          Chipset)
+          125W</p>
         <p>185</p>
 
         <div class="opcije">
@@ -85,11 +89,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-procesor">
         <img src="images/procesor/procesor4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Intel Core i7-12700KF Desktop Processor 12 (8P+4E) Cores up to 5.0
-          GHz Unlocked LGA1700 600 Series Chipset 125W</p>
+        <h2>Intel Core i7-12700KF</h2>
+        <p> Desktop Processor 12 (8P+4E) <br> Cores up to
+          5.0 GHz Unlocked <br> LGA1700 600 Series Chipset 125W</p>
         <p>276</p>
 
         <div class="opcije">
@@ -98,11 +102,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-procesor">
         <img src="images/procesor/procesor5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>AMD Ryzen 5 3600 6-Core, 12-Thread Unlocked Desktop Processor with
-          Wraith Stealth Cooler</p>
+        <h2>AMD Ryzen 5 3600 </h2>
+        <p> 6-Core, <br> 12-Thread Unlocked Desktop Processor
+          with <br> Wraith Stealth Cooler</p>
         <p>116</p>
 
         <div class="opcije">
@@ -111,11 +115,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-procesor">
         <img src="images/procesor/procesor6.jpg" alt="">
         <h2>Product 1</h2>
-        <p>Intel Core i9-11900K Desktop Processor 8 Cores up to 5.3 GHz Unlocked
-          LGA1200 (Intel 500 Series & Select 400 Series Chipset) 125W</p>
+        <p>Intel Core i9-11900K Desktop Processor 8 Cores<br>
+          up to 5.3 GHz Unlocked<br>
+          LGA1200 (Intel 500 Series & Select 400 Series Chipset) </p>
+
         <p>399</p>
 
         <div class="opcije">
