--- a/samsung-monitor.html
+++ b/samsung-monitor.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-monitor.css">
   </head>
   <body>
 
@@ -46,14 +46,14 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-monitor">
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>SAMSUNG 23.5” CF396 Curved Computer Monitor, AMD FreeSync for
-          Advanced Gaming, 4ms Response Time, Wide Viewing Angle, Ultra Slim
-          Design, LC24F396FHNXZA, Black
+        <h2>SAMSUNG </h2>
+        <p>23.5” CF396 Curved Computer Monitor, <br>
+          AMD FreeSync for Advanced Gaming, 4ms Response Time, <br>
+          Wide Viewing Angle, Ultra Slim Design, LC24F396FHNXZA, Black
         </p>
         <p>159</p>
 
@@ -63,11 +63,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG 34-Inch SJ55W Ultrawide Gaming Monitor (LS34J550WQNXZA) –
-          75Hz Refresh, WQHD Computer Monitor, 3440 x 1440p Resolution, 4ms
+        <h2>SAMSUNG </h2>
+        <p>34-Inch SJ55W Ultrawide Gaming Monitor (LS34J550WQNXZA) <br>
+          75Hz Refresh, WQHD Computer Monitor, 3440 x 1440p Resolution, 4ms <br>
           Response, FreeSync, Split Screen, HDMI, Black</p>
         <p>280</p>
 
@@ -77,11 +77,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG S27R650FDN, SR650 Series 27 inch IPS 1080p 75Hz Computer
+        <h2>SAMSUNG</h2>
+        <p> S27R650FDN, SR650 Series 27 inch IPS 1080p 75Hz Computer <br>
           Monitor for Business with VGA, HDMI, DisplayPort, and USB Hub, 3-Year
+          <br>
           Warranty</p>
         <p>189</p>
 
@@ -91,11 +92,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG 32" Odyssey Neo G7 4K UHD 165Hz 1ms G-Sync 1000R Curved
+        <h2>SAMSUNG</h2>
+        <p> 32" Odyssey Neo G7 4K UHD 165Hz 1ms G-Sync 1000R Curved <br>
           Gaming Monitor, Quantum HDR2000, AMD FreeSync Premium Pro, Ultrawide
+          <br>
           Game View, DisplayPort, HDMI, Height Adjustable Stand, Black, 2022</p>
         <p>1177</p>
 
@@ -105,11 +107,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG 27" Odyssey G32A FHD 1ms 165Hz Gaming Monitor with Eye Saver
+        <h2>SAMSUNG</h2>
+        <p> 27" Odyssey G32A FHD 1ms 165Hz Gaming Monitor with Eye Saver
+          <br>
           Mode, Free-Sync Premium, Height Adjustable Screen for Gamer Comfort,
+          <br>
           VESA Mount Capability (LS27AG320NNXZA)</p>
         <p>249</p>
 
@@ -119,10 +123,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG 32" Odyssey G55A QHD 165Hz 1ms FreeSync Curved Gaming Monitor
+        <h2>SAMSUNG</h2>
+        <p> 32" Odyssey G55A QHD 165Hz 1ms <br> FreeSync Curved Gaming
+          Monitor
+          <br>
           with HDR 10, Futuristic Design for Any Desktop (LS32AG550ENXZA)</p>
         <p>341</p>
 
