--- a/ssd.html
+++ b/ssd.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-ssd.css">
   </head>
   <body>
 
@@ -45,12 +45,12 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-ssd">
 
-      <div class="product-box">
+      <div class="product-box-ssd">
         <img src="images/ssd (2)/ssd1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>SAMSUNG 870 EVO SATA III SSD 1TB 2.5” Internal Solid State Drive,<br>
+        <h2>SAMSUNG 870 EVO</h2>
+        <p> SATA III SSD 1TB 2.5” Internal Solid State Drive,<br>
           Upgrade PC or Laptop Memory and Storage for IT Pros, Creators,<br>
           Everyday Users, MZ-77E1T0B/AM
         </p>
@@ -62,10 +62,10 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ssd">
         <img src="images/ssd (2)/ssd2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Kingston 480GB A400 SATA 3 2.5" Internal SSD SA400S37/480G <br> - HDD
+        <h2>Kingston</h2>
+        <p> 480GB A400 SATA 3 2.5" <br> Internal SSD SA400S37/480G <br> - HDD
           Replacement for Increase Performance</p>
         <p>27$</p>
 
@@ -75,10 +75,10 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ssd">
         <img src="images/ssd (2)/ssd3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG 970 EVO Plus SSD 2TB NVMe M.2 Internal Solid State Drive w/
+        <h2>SAMSUNG 970 EVO Plus</h2>
+        <p> SSD 2TB NVMe M.2 Internal Solid State Drive w/
           V-NAND <br> Technology, Storage and Memory Expansion for Gaming,
           Graphics <br>
           w/ Heat Control, Max Speed, MZ-V7S2T0B/AM </p>
@@ -90,10 +90,10 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ssd">
         <img src="images/ssd (2)/ssd4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG 980 PRO SSD 1TB PCIe 4.0 NVMe Gen 4 Gaming M.2 Internal Solid
+        <h2>SAMSUNG 980 PRO</h2>
+        <p> SSD 1TB PCIe 4.0 NVMe Gen 4 Gaming M.2 Internal Solid
           <br>
           State Drive Memory Card, <br> Maximum Speed, Thermal Control,
           MZ-V8P1T0B</p>
@@ -105,11 +105,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ssd">
         <img src="images/ssd (2)/ssd5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG 870 QVO SATA III SSD 1TB 2.5" Internal Solid State Drive,
-          Upgrade Desktop PC <br> or Laptop Memory and Storage for IT Pros,
+        <h2>SAMSUNG 870 QVO</h2>
+        <p> SATA III SSD 1TB 2.5" <br>
+          Internal Solid State Drive, Upgrade Desktop PC or Laptop Memory <br>
+          and Storage for IT Pros,
           Creators, Everyday Users, MZ-77Q1T0B</p>
         <p>140$</p>
 
@@ -119,11 +120,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ssd">
         <img src="images/ssd (2)/ssd6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Western Digital 500GB WD Blue SA510 SATA Internal Solid State Drive
-          SSD <br> - SATA III 6 Gb/s, 2.5"/7mm, Up to 560 MB/s - WDS500G3B0A</p>
+        <h2>Western Digital</h2>
+        <p> 500GB WD Blue SA510 SATA <br>
+          Internal Solid State Drive
+          SSD- SATA III 6 Gb/s, <br>
+          2.5"/7mm, Up to 560 MB/s - WDS500G3B0A</p>
         <p>40</p>
 
         <div class="opcije">
