--- a/dell-monitor.html
+++ b/dell-monitor.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-monitor.css">
   </head>
   <body>
 
@@ -45,13 +45,14 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-monitor">
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor1.jpg" alt="">
         <h2>Skytech Shadow Gaming Pc</h2>
         <p>Dell P2422H 24" 16:9 IPS Computer Monitor Screen with Display Port
-          Cable and USB 3.0 Upstream Cable - New Model
+          <br>
+          Cable and USB 3.0 Upstream Cable - <br> New Model
         </p>
         <p>249</p>
 
@@ -61,11 +62,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor2.jpg" alt="">
         <h2>Product 1</h2>
-        <p>Dell 27-inch USB-C Monitor - Full HD (1920 x 1080 Display, 75Hz
+        <p>Dell 27-inch USB-C Monitor - Full HD (1920 x 1080 Display, 75Hz <br>
           Refresh Rate, 4MS Grey-to-Grey Response Time (Extreme Mode), Dual 3W
+          <br>
           Built-in Speakers, HDMI, IPS, AMD FreeSync, Silver - S2723HC</p>
         <p>200</p>
 
@@ -75,11 +77,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor3.jpg" alt="">
         <h2>Product 1</h2>
-        <p>Dell S2721HS Full HD 1920 x 1080p, 75Hz IPS LED LCD Thin Bezel
-          Adjustable Gaming Monitor, 4ms Grey-to-Grey Response Time, 16.7
+        <p>Dell S2721HS Full HD 1920 x 1080p, 75Hz IPS LED LCD Thin Bezel <br>
+          Adjustable Gaming Monitor, 4ms Grey-to-Grey Response Time, 16.7 <br>
           Million Colors, HDMI ports, AMD FreeSync, Platinum Silver</p>
         <p>210</p>
 
@@ -89,11 +91,13 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor4.jpg" alt="">
         <h2>Product 1</h2>
         <p>Dell 24-Inch 165Hz Gaming Monitor - Full HD 1920 x 1080 Display, 1ms
+          <br>
           Response Time, IPS, AMD FreeSync Technology, 99% sRGB Color Gamut,
+          <br>
           NVIDIA G-Sync Compatible, HDMI, DisplayPort, Black - G2422HS</p>
         <p>172</p>
 
@@ -103,10 +107,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor5.jpg" alt="">
         <h2>Product 1</h2>
         <p>Dell Curved Gaming Monitor 27 Inch Curved with 165Hz Refresh Rate,
+          <br>
           QHD (2560 x 1440) Display, Black - S2722DGM</p>
         <p>189</p>
 
@@ -116,10 +121,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor6.jpg" alt="">
         <h2>Product 1</h2>
         <p>Dell S3221QS 32 Inch Curved 4K UHD, VA Ultra-Thin Bezel Monitor, AMD
+          <br>
           FreeSync, HDMI, DisplayPort, Built in Speakers, VESA Certified, Silver</p>
         <p>240</p>
 
