--- a/lenovo-laptop.html
+++ b/lenovo-laptop.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-laptop.css">
   </head>
   <body>
 
@@ -45,9 +45,9 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-laptop">
 
-      <div class="product-box">
+      <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop1.jpg" alt="">
         <h2>Skytech Shadow Gaming Pc</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
@@ -66,7 +66,7 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop2.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
@@ -84,7 +84,7 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop3.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
@@ -102,7 +102,7 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop4.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
@@ -120,7 +120,7 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop5.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
@@ -138,7 +138,7 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop6.jpg" alt="">
         <h2>Product 1</h2>
         <p>Procesor: AMD Ryzen 5 7600x <br>
