--- a/napojna.html
+++ b/napojna.html
@@ -49,9 +49,13 @@
 
       <div class="product-box">
         <img src="images/napojna (2)/napojna1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Thermaltake Smart 500W 80+ White Certified PSU, Continuous Power with
-          120mm Ultra Quiet Cooling Fan, ATX 12V V2.3/EPS 12V Active PFC Power
+        <h2>Thermaltake Smart</h2>
+        <p> 500W 80+ White Certified PSU,<br> Continuous Power
+          with
+
+          120mm Ultra Quiet Cooling Fan, <br> ATX 12V V2.3/EPS 12V Active PFC
+          Power
+          <br>
           Supply PS-SPD-0500NPCWUS-W
         </p>
         <p>34</p>
@@ -64,10 +68,12 @@
 
       <div class="product-box">
         <img src="images/napojna (2)/napojna2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Thermaltake Toughpower 750W 80 Plus Gold Semi Modular PSU ATX 12V or
-          EPS 12V Ultra Quiet Power Supply PS-TPD-0750MPCGUS-1</p>
+        <h2>Thermaltake Toughpower</h2>
+        <p> 750W 80 Plus Gold <br> Semi Modular PSU ATX
+          12V or EPS 12V <br>Ultra Quiet Power Supply <br> PS-TPD-0750MPCGUS-1</p>
         <p>95</p>
+
+
 
         <div class="opcije">
           <a href="#">Buy it now</a>
@@ -77,9 +83,11 @@
 
       <div class="product-box">
         <img src="images/napojna (2)/napojna3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Cooler Master MWE White 550 80+ White 550W PSU with HDB Silent 120mm
-          Fan, Single +12V Rail, Flat Black Cables</p>
+        <h2>Cooler Master MWE </h2>
+        <p>White 550 80+ White 550W <br> PSU with HDB Silent
+          120mm
+          <br>
+          Fan, Single +12V Rail, <br> Flat Black Cables</p>
         <p>54</p>
 
         <div class="opcije">
@@ -90,8 +98,8 @@
 
       <div class="product-box">
         <img src="images/napojna (2)/napojna4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>850W Power Supply 80+ Gold PSU Fully Modular ATX PSU</p>
+        <h2>Power Supply</h2>
+        <p>850W 80+ Gold PSU Fully Modular ATX PSU</p>
         <p>109</p>
 
         <div class="opcije">
@@ -102,8 +110,8 @@
 
       <div class="product-box">
         <img src="images/napojna (2)/napojna5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Corsair RMx Series (2021), RM850x, 850 Watt, GOLD, Fully Modular
+        <h2>Corsair </h2>
+        <p> RMx Series(2021), RM850x, 850 Watt, GOLD, Fully Modular <br>
           Power Supply (CP-9020200-NA)</p>
         <p>137</p>
 
@@ -115,8 +123,9 @@
 
       <div class="product-box">
         <img src="images/napojna (2)/napojna6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS ROG Strix 750 Fully Modular 80 Plus Gold 750W ATX Power Supply
+        <h2>ASUS ROG Strix </h2>
+        <p>750 Fully Modular 80 Plus Gold 750W ATX Power Supply
+          <br>
           with 0dB Axial Tech Fan and 10 Year Warranty</p>
         <p>147</p>
 
