--- a/ram memorija.html
+++ b/ram memorija.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-ram.css">
   </head>
   <body>
 
@@ -45,12 +45,13 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-ram">
 
-      <div class="product-box">
+      <div class="product-box-ram">
         <img src="images/ram/ram1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Corsair Vengeance RGB Pro 32GB (2x16GB) DDR4 3200 (PC4-25600) C16
+        <h2>Corsair Vengeance RGB Pro</h2>
+        <p> 32GB (2x16GB) DDR4 3200 (PC4-25600) C16
+          <br>
           Desktop memory – Black
         </p>
         <p>108</p>
@@ -61,10 +62,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ram">
         <img src="images/ram/ram2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Corsair Vengeance RGB Pro SL 32GB (2x16GB) DDR4 3600 (PC4-28800) C18
+        <h2>Corsair Vengeance RGB Pro SL</h2>
+        <p> 32GB (2x16GB) DDR4 3600 (PC4-28800) C18
+          <br>
           1.35V Desktop Memory - White (CMH32GX4M2D3600C18W)</p>
         <p>104</p>
 
@@ -74,10 +76,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ram">
         <img src="images/ram/ram3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>G.Skill Trident Z RGB Series 32GB (2 x 16GB) 288-Pin SDRAM DDR4 3600
+        <h2>G.Skill Trident Z RGB Series </h2>
+        <p>32GB (2 x 16GB) 288-Pin SDRAM DDR4 3600
+          <br>
           CL18-22-22-42 1.35V Dual Channel Desktop Memory F4-3600C18D-32GTZR</p>
         <p>109</p>
 
@@ -87,10 +90,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ram">
         <img src="images/ram/ram4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Corsair Vengeance RGB Pro 64GB (4x16GB) DDR4 3600 (PC4-28800) C18
+        <h2>Corsair Vengeance RGB Pro</h2>
+        <p> 64GB (4x16GB) DDR4 3600 (PC4-28800) C18
+          <br>
           Desktop Memory – Black, CMW64GX4M4D3600C18</p>
         <p>229</p>
 
@@ -100,11 +104,12 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ram">
         <img src="images/ram/ram5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Timetec Pinnacle Konduit RGB 16GB DDR4 3200MHz PC4-25600
+        <h2>Timetec Pinnacle Konduit RGB</h2>
+        <p> 16GB DDR4 3200MHz PC4-25600 <br>
           CL16-18-18-38 XMP2.0 Overclocking 1.35V Dual Rank Compatible for AMD
+          <br>
           and Intel Desktop Gaming PC Memory Module - White</p>
         <p>57</p>
 
@@ -114,11 +119,11 @@
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-ram">
         <img src="images/ram/ram6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>G.Skill Ripjaws V Series 32GB (2 x 16GB) 288-Pin SDRAM DDR4 3600
-          (PC4-28800) CL18-22-22-42 1.35V Dual Channel Desktop Memory Model
+        <h2>G.Skill Ripjaws V Series</h2>
+        <p> 32GB (2 x 16GB) 288-Pin SDRAM DDR4 3600 <br>
+          (PC4-28800) CL18-22-22-42 1.35V Dual Channel Desktop Memory Model <br>
           F4-3600C18D-32GVK</p>
         <p>88</p>
 
